test/integration/bad/numeric-literal/int-bad3.stan
transformed data {
    int n = 10_000_000_000;
}